logout check index

--- a/BookSaleProject/src/main/resources/templates/header.html
+++ b/BookSaleProject/src/main/resources/templates/header.html
@@ -65,7 +65,7 @@
                     <div class="col-sm-7 ">
                         <div class="row">
                             <div class="col-sm-6" style="text-align: left;">
-                                <a th:href="@{/book/index}"
+                                <a th:href="@{/}"
                                     style="text-decoration: none; color: white;font-family: 'Courier New', Courier, monospace; font-size: xx-large;letter-spacing: 4px;">
                                     <i class="fa-solid fa-book-open"></i>ONLINE BOOKSALE </a>
                             </div>
@@ -74,7 +74,7 @@
 
 
                                     <div class="col-sm-6 dropdown">
-                                        <a style="text-decoration: none; color: white; font-size: small;"
+                                        <a style="text-decoration: none; color: white; font-size: small; cursor: pointer;"
                                             onmouseover=" this.style.textDecoration='underline'"
                                             onmouseout=" this.style.textDecoration='none'">
                                             <i class="fa-solid fa-list"></i>DANH MỤC SẢN PHẨM
@@ -110,17 +110,40 @@
                     <div class="col-sm-4" style="margin-top:10px;">
                         <div class="row">
                             <div class="col">
-                                <div th:if="${user != null}">
-                                    <a href="{#}" style="text-decoration: none; color: white; font-size: small;"
-                                    onmouseover=" this.style.textDecoration='underline'"
-                                    onmouseout=" this.style.textDecoration='none'"> <i
-                                        class="fa-solid fa-user"></i><p th:text="${user.username}"></p></a>
+                                <div th:if="${user.email != null}">
+                                    <div class="dropdown">
+                                        <a style="text-decoration: none; color: white; font-size: large;cursor: pointer;">
+                                            <i class="fa-solid fa-user">
+                                                <p th:text="'  '+${user.username}"
+                                                    style="display: inline-flex;font-family:'Times New Roman', Times, serif;font-weight: lighter;">
+                                                </p>
+                                            </i>
+                                        </a>
+                                        <div class="dropdown-content">
+                                            <div>
+                                                <a href="#">
+                                                    <p
+                                                        style="font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;display: inline-flex;">
+                                                        Tài khoản của tôi</p>
+                                                </a>
+                                            </div>
+                                            <div>
+                                                <a th:href="@{/user/logout}">
+                                                    <p
+                                                        style="font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;display: inline-flex;">
+                                                        Đăng xuất</p>
+                                                </a>
+                                            </div>
+                                        </div>
+                                    </div>
+
                                 </div>
-                                <div th:unless="${user != null}">
-                                    <a th:href="@{/client}" style="text-decoration: none; color: white; font-size: small;"
-                                    onmouseover=" this.style.textDecoration='underline'"
-                                    onmouseout=" this.style.textDecoration='none'"> <i
-                                        class="fa-solid fa-user"></i>LOGIN/SIGNUP</a>
+                                <div th:unless="${user.email != null}">
+                                    <a th:href="@{/user}"
+                                        style="text-decoration: none; color: white; font-size: small;"
+                                        onmouseover=" this.style.textDecoration='underline'"
+                                        onmouseout=" this.style.textDecoration='none'"> <i
+                                            class="fa-solid fa-user"></i>LOGIN/SIGNUP</a>
                                 </div>
                             </div>
                             <div class="col">
