--- a/BookSaleProject/src/main/resources/templates/Register.html
+++ b/BookSaleProject/src/main/resources/templates/Register.html
@@ -1,79 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <title>Login</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet"
+    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="https://cdn.tailwindcss.com"></script>
+  <title>Login</title>
 </head>
-<body>
-  <header th:insert="~{header :: header}"></header>
-    <div class="row">
-        <div class="col-sm-8"></div>
-        <div class="col-sm-4" style="padding-top: 0.5%;">
-            <p style="display: inline;">HotLine:</p>
-            <p style="color: green; display: inline;">0938 424 289</p>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-1"></div>
-        <div class="col-9">
-            <button><a href="mainPage.html" style="font-weight: bold;">Website Mua Bán Sách</a></button>/Đăng Nhập
-        </div>
-        <div class="col-2"></div>
-    </div>
-    <div class="row" style="padding-top: 2%;">
-        <div class="col-1"></div>
-        <div class="col-9">
-            <p style="font-size: 150%; display: inline;"><strong>Đăng kí</strong>/</p>
-            <button><a href="Login.html"><strong style="font-size: 150%; color: aquamarine;">Đăng nhập</strong></a></button>
-            <hr>
-        </div>
-        <div class="col-2"></div>
-      </div>
-      <div class="row" style="padding: 2%;">
-        <div class="col-3"></div>
-        <div class="col-6">
-            <div class="container mt-3">
-                <form action="">
-                  <div class="form-floating mb-3 mt-3">
-                    <input type="text" class="form-control" id="email" placeholder="Enter email" name="email">
-                    <label for="email">Email</label>
+
+<body style="background-image: url('images/background2.jpg');">
+    <div class="mask d-flex align-items-center h-100 gradient-custom-3">
+      <div class="container h-100">
+        <div class="row d-flex justify-content-center align-items-center h-100">
+          <div class="col-12 col-md-9 col-lg-7 col-xl-6">
+            <div class="card" style="border-radius: 15px;">
+              <div class="card-body p-5">
+                <h2 class="text-uppercase text-center mb-5">Create an account</h2>
+
+                <form>
+
+                  <div data-mdb-input-init class="form-outline mb-4">
+                    <input type="text" id="username" class="form-control form-control-lg" />
+                    <label class="form-label" for="username">Nhập tên</label>
                   </div>
-                  <div class="form-floating mt-3 mb-3">
-                    <input type="text" class="form-control" id="pwd" placeholder="Enter password" name="pswd">
-                    <label for="pwd">Mật Khẩu</label>
+
+                  <div data-mdb-input-init class="form-outline mb-4">
+                    <input type="email" id="email" class="form-control form-control-lg" />
+                    <label class="form-label" for="email">Nhập Email</label>
                   </div>
-                  <div class="form-floating mb-3 mt-3">
-                    <input type="text" class="form-control" id="pwd1" placeholder="Enter password again" name="pswd1">
-                    <label for="pwd1">Nhập lại mật khẩu</label>
+
+                  <div data-mdb-input-init class="form-outline mb-4">
+                    <input type="tel" id="sdt" class="form-control form-control-lg" />
+                    <label class="form-label" for="sdt">Nhập số điện thoại</label>
                   </div>
-                  <div class="form-floating mb-3 mt-3">
-                    <input type="text" class="form-control" id="fullname" placeholder="Enter name" name="fullname">
-                    <label for="fullname">Nhập Họ và Tên</label>
+
+                  <div data-mdb-input-init class="form-outline mb-4">
+                    <input type="password" id="psw" class="form-control form-control-lg" />
+                    <label class="form-label" for="psw">Nhập mật khẩu</label>
                   </div>
-                  <div class="form-floating mb-3 mt-3">
-                    <input type="text" class="form-control" id="pnb" placeholder="Enter phone-number" name="pnb">
-                    <label for="address">Nhập Số Điện Thoại</label>
+
+                  <div data-mdb-input-init class="form-outline mb-4">
+                    <input type="password" id="pswg" class="form-control form-control-lg" />
+                    <label class="form-label" for="pswg">Nhập lại mật khẩu</label>
                   </div>
-                  <div class="form-floating mb-3 mt-3">
-                    <input type="text" class="form-control" id="address" placeholder="Enter address" name="address">
-                    <label for="address">Nhập Địa Chỉ</label>
+
+                  <div class="d-flex justify-content-center">
+                    <button type="button" data-mdb-button-init data-mdb-ripple-init
+                      class="btn btn-success btn-block btn-lg gradient-custom-4 text-body">Register</button>
                   </div>
-                  <div style="padding-left: 40%;padding-top: 5%;display: inline;">
-                    <button type="submit" class="btn btn-primary" style="background-color: aquamarine; color: black;font-weight: bold; width: 15%;">Đăng Kí</button>
-                  </div>
+
+                  <p class="text-center text-muted mt-5 mb-0">Đã có tài khoản? <a href="#!"
+                      class="fw-bold text-body"><u>Đăng nhập</u></a></p>
                 </form>
               </div>
+            </div>
+          </div>
         </div>
-        <div class="col-3"></div>
       </div>
-      
-      <footer th:insert="~{footer :: footer}"></footer>
+    </div>
 </body>
+
 </html>
