--- a/BookSaleProject/src/main/resources/templates/index.html
+++ b/BookSaleProject/src/main/resources/templates/index.html
@@ -164,7 +164,7 @@
                   </div>
                 </div>
                 <div class="card-body">
-                  <h4 class="card-title" th:text="${book.key.name}" style="font-size: larger;font-weight: bold;"></h4>
+                  <p class="card-title" th:text="${book.key.name}" style="font-size: larger;font-weight: bold;white-space: nowrap;overflow: hidden;text-overflow: ellipsis;"></p>
                   <p class="card-text" th:text="${book.key.price}+'đ'" style="color: #01a14b;"></p>
                   <div>
                     <button type="submit"
@@ -300,7 +300,7 @@
                   </div>
                 </div>
                 <div class="card-body">
-                  <h4 class="card-title" th:text="${book.key.name}" style="font-size: larger;font-weight: bold;"></h4>
+                  <p class="card-title" th:text="${book.key.name}" style="font-size: larger;font-weight: bold;white-space: nowrap;overflow: hidden;text-overflow: ellipsis;"></p>
                   <p class="card-text" th:text="${book.key.price}+'đ'" style="color: #01a14b;"></p>
                   <div>
                     <button type="submit"
