--- a/BookSaleProject/src/main/resources/templates/login.html
+++ b/BookSaleProject/src/main/resources/templates/login.html
@@ -50,7 +50,7 @@
 									</button>
 								</div>
 								<div class="mt-4 text-center">
-									Don't have an account? <a href="#">Create One</a>
+									Don't have an account? <a th:href="@{/user/showRegist}">Create One</a>
 								</div>
 							</form>
 						</div>
