--- a/BookSaleProject/src/main/resources/templates/Register.html
+++ b/BookSaleProject/src/main/resources/templates/Register.html
@@ -14,6 +14,31 @@
   <title>Login</title>
 </head>
 
+<script th:inline="javascript">
+  var mess = /*[[${mess}]]*/ {};
+  if(mess != null || !mess.isEmpty) {
+    var message = mess.split(" ");
+    message.forEach(element => {
+      if (element.equals("email")) {
+        var email = document.getElementById("email").style.color="red";
+      }
+      if (element.equals("password")) {
+        var password = document.getElementById("password").style.color="red";
+      }
+      if (element.equals("sdt")) {
+        var sdt = document.getElementById("sdt").style.color="red";
+      }
+      if (element.equals("doublicate")) {
+        var email = document.getElementById("email").style.placeContent="Email đã tồn tại";
+      }
+      if (element.equals("errorpassword")) {
+        var password = document.getElementById("passAgain").style.placeContent="Mật khẩu không trùng khớp";
+      }
+    });
+  }
+
+</script>
+
 <body style="background-image: url('images/background2.jpg');">
     <div class="mask d-flex align-items-center h-100 gradient-custom-3">
       <div class="container h-100">
@@ -23,39 +48,38 @@
               <div class="card-body p-5">
                 <h2 class="text-uppercase text-center mb-5">Create an account</h2>
 
-                <form>
-
+                <form th:action="@{/user/register}" th:method="post" th:object="${user}">
                   <div data-mdb-input-init class="form-outline mb-4">
-                    <input type="text" id="username" class="form-control form-control-lg" />
+                    <input type="text" id="username" class="form-control form-control-lg" th:field="*{username}" />
                     <label class="form-label" for="username">Nhập tên</label>
                   </div>
 
                   <div data-mdb-input-init class="form-outline mb-4">
-                    <input type="email" id="email" class="form-control form-control-lg" />
+                    <input type="email" id="email" class="form-control form-control-lg" th:field="*{email}"/>
                     <label class="form-label" for="email">Nhập Email</label>
                   </div>
 
                   <div data-mdb-input-init class="form-outline mb-4">
-                    <input type="tel" id="sdt" class="form-control form-control-lg" />
+                    <input type="tel" id="sdt" class="form-control form-control-lg" th:field="*{sdt}"/>
                     <label class="form-label" for="sdt">Nhập số điện thoại</label>
                   </div>
 
                   <div data-mdb-input-init class="form-outline mb-4">
-                    <input type="password" id="psw" class="form-control form-control-lg" />
+                    <input type="password" id="psw" class="form-control form-control-lg" th:field="*{password}"/>
                     <label class="form-label" for="psw">Nhập mật khẩu</label>
                   </div>
 
                   <div data-mdb-input-init class="form-outline mb-4">
-                    <input type="password" id="pswg" class="form-control form-control-lg" />
+                    <input type="password" id="pswg" class="form-control form-control-lg" name="passAgain"/>
                     <label class="form-label" for="pswg">Nhập lại mật khẩu</label>
                   </div>
 
                   <div class="d-flex justify-content-center">
-                    <button type="button" data-mdb-button-init data-mdb-ripple-init
+                    <button type="submit" data-mdb-button-init data-mdb-ripple-init
                       class="btn btn-success btn-block btn-lg gradient-custom-4 text-body">Register</button>
                   </div>
 
-                  <p class="text-center text-muted mt-5 mb-0">Đã có tài khoản? <a href="#!"
+                  <p class="text-center text-muted mt-5 mb-0">Đã có tài khoản? <a th:href="@{/user/}"
                       class="fw-bold text-body"><u>Đăng nhập</u></a></p>
                 </form>
               </div>
