--- a/BookSaleProject/src/main/resources/templates/login.html
+++ b/BookSaleProject/src/main/resources/templates/login.html
@@ -9,7 +9,6 @@
 	<link rel="stylesheet" type="text/css" th:href="@{/css/login.css}">
 </head>
 
-
 <body class="my-login-page">
 	<section class="h-100">
 		<div class="container h-100">
@@ -24,7 +23,7 @@
 							<form th:method="post" class="my-login-validation" th:action="@{/user/login}" th:object="${user}">
 								<div class="form-group">
 									<label for="email">Email</label>
-									<input id="email" type="text" class="form-control" th:field="*{email}">
+									<input id="email" type="text" class="form-control" th:field="*{email}" name="email">
 								</div>
 
 								<div class="form-group">
@@ -36,13 +35,13 @@
 									<input id="password" type="password" class="form-control" name="password" th:field="*{password}">
 								</div>
 
-								<div class="form-group">
+								<!-- <div class="form-group">
 									<div class="custom-checkbox custom-control">
-										<input type="checkbox" name="remember" id="remember"
+										<input type="checkbox" name="rememberme" id="remember"
 											class="custom-control-input">
 										<label for="remember" class="custom-control-label">Remember Me</label>
 									</div>
-								</div>
+								</div> -->
 
 								<div class="form-group m-0">
 									<button type="submit" class="btn btn-primary btn-block">
